--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,140 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+    <color name="red">#FFFF0000</color>
+    <color name="transparent">@android:color/transparent</color>
+
+    <color name="pressed_item_foreground">#08000000</color>
+
+    <color name="default_text_color">#FF202020</color>
+    <color name="default_hint_text_color">#FFBBBBBB</color>
+    <color name="no_data_text_color">#FF808080</color>
+    <color name="activated_item_foreground">#44888888</color>
+    <color name="default_background_color">#FF2D2D2D</color>
+
+    <color name="second_text_color">#FF646464</color>
+    <color name="third_text_color">#FF808080</color>
+
+    <color name="color_primary">#FF4CA3FF</color>
+    <color name="color_primary_dark">#FF4CA3FF</color>
+    <color name="color_accent">@color/color_primary</color>
+    <color name="search_shadow_color">#404CA3FF</color>
+
+    <color name="you_background_color">@color/color_primary</color>
+
+    <color name="accept_button_color">#FFE7F2FF</color>
+    <color name="decline_button_color">@color/color_primary</color>
+    <color name="delete_button_color">#FFE5252A</color>
+
+    <color name="md_grey_white">#FFFFFF</color>
+    <color name="md_grey_200">#EEEEEE</color>
+    <color name="md_grey_300">#E0E0E0</color>
+    <color name="md_grey_400">#BDBDBD</color>
+    <color name="md_grey_500">#9E9E9E</color>
+    <color name="md_grey_600">#757575</color>
+    <color name="md_grey_700">#616161</color>
+    <color name="md_grey_800">#424242</color>
+    <color name="md_grey_black">#000000</color>
+
+    <color name="md_grey_white_dark">#DFDFDF</color>
+    <color name="md_grey_200_dark">#DADADA</color>
+    <color name="md_grey_300_dark">#CCCCCC</color>
+    <color name="md_grey_400_dark">#A9A9A9</color>
+    <color name="md_grey_500_dark">#8A8A8A</color>
+    <color name="md_grey_600_dark">#606060</color>
+    <color name="md_grey_700_dark">#4C4C4C</color>
+    <color name="md_grey_800_dark">#2D2D2D</color>
+    <color name="md_grey_black_dark">#000000</color>
+
+    <color name="colorPrimary">#ff3396FF</color>
+    <color name="colorPrimaryDark">#ffffff</color>
+    <color name="colorAccent">#ff0849e8</color>
+    <color name="colorWhite">#ffffff</color>
+
+    <color name="backgroundColor">#fff5f7fa</color>
+    <color name="colorWordSelectedBorder_2392FF">#2392FF</color>
+
+    <color name="purple_200">#FFBB86FC</color>
+    <color name="purple_500">#FF6200EE</color>
+    <color name="purple_700">#FF3700B3</color>
+    <color name="teal_200">#FF03DAC5</color>
+    <color name="teal_700">#FF018786</color>
+    <color name="toolbar_color">#181a20</color>
+
+    <color name="rsbColorSeekBarDefault">#c3c3c3</color>
+    <color name="rsbColorThumbPressed">#FFE7E7E7</color>
+    <color name="rsbColorThumbDefault">#FFFFFF</color>
+    <color name="rsbColorThumbBorder">#FFD7D7D7</color>
+
+    <color name="color_file_name">#b3000000</color>
+    <color name="text_title_color">#ff252525</color>
+    <color name="text_color_secondary">#b3000000</color>
+
+    <color name="color_divider">#989898</color>
+    <color name="colorTextHint">#9e9e9e</color>
+    <color name="divider_color">#e6e6e6</color>
+    <color name="text_main_color">#000000</color>
+    <color name="bg_dialog">#ffffff</color>
+
+    <color name="line_bg">#0d000000</color>
+
+    <color name="text_light">#404040</color>
+
+    <color name="color_cardBg_allDoc_upper">#3DAAED</color>
+    <color name="color_cardBg_allDoc_lower">#10E1E8</color>
+
+    <color name="color_cardBg_pdfDoc_upper">#FC4A4A</color>
+    <color name="color_cardBg_pdfDoc_lower">#F98B8B</color>
+
+    <color name="color_cardBg_wordDoc_upper">#7A8EF9</color>
+    <color name="color_cardBg_wordDoc_lower">#9977F6</color>
+
+    <color name="color_cardBg_txtDoc_upper">#FF3787</color>
+    <color name="color_cardBg_txtDoc_lower">#FD47D0</color>
+
+    <color name="color_cardBg_pptDoc_upper">#F93434</color>
+    <color name="color_cardBg_pptDoc_lower">#F87575</color>
+
+    <color name="color_cardBg_htmlDoc_upper">#F860C7</color>
+    <color name="color_cardBg_htmlDoc_lower">#F9BDBD</color>
+
+    <color name="color_cardBg_xmlDoc_upper">#7A8DF9</color>
+    <color name="color_cardBg_xmlDoc_lower">#9978F6</color>
+
+    <color name="color_cardBg_sheetDoc_upper">#FF3989</color>
+    <color name="color_cardBg_sheetDoc_lower">#FD48D4</color>
+
+    <color name="color_cardBg_rtfDoc_upper">#FF5C39</color>
+    <color name="color_cardBg_rtfDoc_lower">#FDB048</color>
+
+    <color name="color_Red">#FF3600</color>
+
+    <color name="colorPDFViewBg">#ffe0e0e0</color>
+
+    <color name="line_stroke">#f1f1f1</color>
+    <color name="colorPrimaryDarkNight">#ff192532</color>
+    <color name="colorTitleTextLight">#ff212121</color>
+    <color name="colorDividerLight">#ffdbdbdb</color>
+    <color name="colorPrimaryNight">#ff243447</color>
+    <color name="colorTitleTextNight">#c2ffffff</color>
+    <color name="colorMoreInfo">#ffdaf1e2</color>
+    <color name="colorLightGray">#ffe0e0e0</color>
+    <color name="colorDarkerGray">#ff616161</color>
+
+    <color name="rippleColorBtn">#23000000</color>
+    <color name="color_line">#FFF2F2F2</color>
+
+    <color name="colorNormalBg">#ffffffff</color>
+    <color name="colorPrimaryLine">#ff000000</color>
+    <color name="colorPrimaryTint">#006cff</color>
+    <color name="colorPrimaryText">#ff041d45</color>
+    <color name="colorSolidText">#ff000000</color>
+    <color name="colorNormalText">#78869d</color>
+    <color name="colorNegativeTint">#FFEEF1F5</color>
+    <color name="color_hint_text">#FFBBBBBB</color>
+
+
+    <color name="ripple_color">#26000000</color>
+    <color name="color_disable_button">#78869d</color>
+    <color name="colorButton">#f3303b</color>
 </resources>
