--- a/app/src/main/res/layout/fragment_scan_home.xml
+++ b/app/src/main/res/layout/fragment_scan_home.xml
@@ -16,12 +16,12 @@
         android:id="@+id/card_view_loading"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="14dp"
-        android:layout_marginTop="4dp"
         android:translationX="-300dp"
         app:cardBackgroundColor="@color/background"
         app:cardCornerRadius="14dp"
         app:cardElevation="2dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:strokeColor="@color/loading_outline"
